Fix "Properties" and "Permissions" dialog UI
Properties - "General Information" tab
Removed indentation of whole content using inline style
in xul overlay. Nothing else worked. Or did work but
messed up non 3e calendars UI.

Properties - "Sharing" tab
Size of Add/Remove buttons slightly enlarged. They were small
on Linux (KDE) and OS X.
Added top margin to Add/Remove buttons. There was no margin on Windows.
Added top margin to actual permissions list. So it is not so close
to description above it.

Permissions dialog
Changed default dialog size to 500x281, same as Properties dialog.
Added left indentation to entries in listbox.
Search textbox's type set to "search".

--- a/chrome/skin/global.css
+++ b/chrome/skin/global.css
@@ -44,3 +44,16 @@ treechildren::-moz-tree-checkbox {
 treechildren::-moz-tree-checkbox(checked) {
   list-style-image: url("chrome://calendar3e/skin/checkbox-checked.gif");
 }
+
+tree.calendar3e-permissions {
+  margin-top: 6px;
+}
+
+button.calendar3e-permissions {
+  margin-top: 6px;
+  height: 2.15em;
+}
+
+listcell.calendar3e-indent {
+  margin-left: 6px;
+}
